--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.1.1",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.3"
   },
   "devDependencies": {}
