--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,9 +3,7 @@
 
 name: self-hosted-runner
 
-on:
-  push:
-    branches: [ master ]
+on: [push]
 
 jobs:
   build:
@@ -13,6 +11,5 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    - uses: actions/checkout@master
     - run: npm start
 
