--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+      - run: npm ci
+      - uses: actions/checkout@master
       - run: npm start
 
