--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,7 @@ jobs:
         cd /home/zackkomo/
         cp .env /home/zackkomo/zBot/zBot/zBot/zBot/
         cd /home/zackkomo/zBot/zBot/zBot/zBot/
+        pm2 restart index
         
 
 
