--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,13 +16,14 @@ jobs:
         node-version: [12.x]
 
     steps:
+    - run: pm2 stop zBot
     - uses: actions/checkout@v2
     - name: Run
       run: |
         cd /home/zackkomo/
         cp .env /home/zackkomo/zBot/zBot/zBot/zBot/
         cd /home/zackkomo/zBot/zBot/zBot/zBot/
-        pm2 restart index
+        pm2 restart zBot
         
 
 
