--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,8 +3,6 @@ name: self-hosted-runner
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -16,7 +14,7 @@ jobs:
         node-version: [12.x]
 
     steps:
-    - run: pm2 stop zBot
+    - run: pm2 list
     - uses: actions/checkout@v2
     - name: Run
       run: |
