--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,12 +18,14 @@ jobs:
       run: |
         cd /home/zackkomo/zBot/zBot/zBot/zBot/commands
         cp pollList.json /home/zackkomo
+        cp reminderList.json /home/zackkomo
     - uses: actions/checkout@v2
     - name: Run
       run: |
         cd /home/zackkomo/
         cp .env /home/zackkomo/zBot/zBot/zBot/zBot/
         cp pollList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
+        cp reminderList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
         bash pm2script.sh
         cd /home/zackkomo/zBot/zBot/zBot/zBot/
         
