--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: test
         run: pwd
-        working-directory: ~/home/zackkomo
+        working-directory: ~/home/
     
     
     
