--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,8 +13,9 @@ jobs:
          node-version: [12.x]
     steps:
       - name: test
-        run: pwd
-        working-directory: ~/home/
+        run: |
+           pwd
+           ls
     
     
     
