--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - shell: bash
         run: |
-             pwd
-             ls
+            cd ~/home/zackkomo/test
+            touch here.txt
     
     
     
