--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - shell: bash
         run: |
-            cd ~/home/zackkomo/test
+            cd /home/zackkomo/test
             touch here.txt
     
     
