--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,7 +14,17 @@ jobs:
     steps:
       - shell: bash
         run: |
-            ls
+            cd /home/zackkomo/zBot/zBot/zBot/zBot/commands
+            cp pollList.json /home/zackkomo
+            cp reminderList.json /home/zackkomo
+            git pull
+            cd /home/zackkomo/
+            cp .env /home/zackkomo/zBot/zBot/zBot/zBot/
+            cp pollList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
+            cp reminderList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
+            systemctl restart zBot
+            systemctl status zBot
+
     
     
     
