--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,8 +24,8 @@ jobs:
           cp .env /home/zackkomo/zBot/zBot/zBot/zBot/
           cp pollList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
           cp reminderList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
-          systemctl restart zBot
-          systemctl status zBot
+          sudo systemctl restart zBot
+          sudo systemctl status zBot
          
     
     
