--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
           cp pollList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
           cp reminderList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
           whoami
-          sudo systemctl status zBot
+          systemctl status zBot
           sudo /usr/sbin/service javaspringapi restart
          
     
