--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,24 +13,24 @@ jobs:
          node-version: [12.x]
     steps:
       - shell: bash
-      - name: Stop bot
-          run: |
+      - name: Stopbot
+        run: |
               sudo systemctl stop zBot
-      name: Preserve files
-          run: |
+      - name: Preservefiles
+        run: |
               sudo systemctl stop zBot
               cd /home/zackkomo/zBot/zBot/zBot/zBot/commands
               cp pollList.json /home/zackkomo
               cp reminderList.json /home/zackkomo
             
-      uses: actions/checkout@v2
-      name: Restore files
+      - uses: actions/checkout@master
+      - name: Restorefiles
         run: |
           cd /home/zackkomo/
           cp .env /home/zackkomo/zBot/zBot/zBot/zBot/
           cp pollList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
           cp reminderList.json /home/zackkomo/zBot/zBot/zBot/zBot/commands
-      name: start bot
+      - name: startbot
         run: |
           sudo /usr/sbin/service javaspringapi restart
           echo hello
