--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,8 +23,9 @@ jobs:
               cd /home/zackkomo/zBot/zBot/zBot/zBot/commands
               cp pollList.json /home/zackkomo
               cp reminderList.json /home/zackkomo
-            
-      - uses: actions/checkout@master
+              
+      - name: push
+        uses: actions/checkout@master
         
       - name: Restorefiles
         run: |
