--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -18,7 +18,6 @@ jobs:
               
       - name: Preservefiles
         run: |
-              sudo systemctl stop zBot
               cd /home/zackkomo/zBot/zBot/zBot/zBot/commands
               cp pollList.json /home/zackkomo
               cp reminderList.json /home/zackkomo
@@ -35,8 +34,7 @@ jobs:
           
       - name: startbot
         run: |
-          sudo /usr/sbin/service javaspringapi restart
-          echo hello
+            sudo systemctl restart zBot
          
     
     
